# Secp256k1-zkp-React-Native-Module

./: .gitignore  README.md  package-lock.json  package.json  secp256k1-zkp-react.podspec  tsconfig.json
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/secp256k1zkpreact/: Secp256k1ZkpReactModule.java  Secp256k1ZkpReactPackage.java
cpp/: secp256k1-zkp-react.cpp  secp256k1-zkp-react.h
ios/: Secp256k1ZkpReact.h  Secp256k1ZkpReact.mm
ios/Secp256k1ZkpReact.xcodeproj/: project.pbxproj
src/: index.js  index.tsx
